fix hover box overflow

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -28,7 +28,7 @@ a {
 }
 
 //Required for IE11. Other browsers set this by default.
-svg { overflow: hidden; }
+svg { overflow: visible; }
 
 svg a { fill: $color-brand-primary; }
 svg a:hover { fill: #3c6dc5; }
